@startuml

title __POOL's Class Diagram__\n

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.pool {
      class ConnectionPool {
          {static} - LOGGER : Logger
          - url : String
          - user : String
          - password : String
          - maxSize : int
          - checkConnectionTimeout : int
          - lock : Lock
          - freeConnections : BlockingQueue<PooledConnection>
          - usedConnections : Set<PooledConnection>
          {static} - instance : ConnectionPool
          - ConnectionPool()
          + getConnection()
          + freeConnection()
          + init()
          {static} + getInstance()
          - createConnection()
          + destroy()
          # finalize()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.pool {
      class PooledConnection {
          - connection : Connection
          + PooledConnection()
          + getConnection()
          + isWrapperFor()
          + unwrap()
          + abort()
          + clearWarnings()
          + close()
          + commit()
          + createArrayOf()
          + createBlob()
          + createClob()
          + createNClob()
          + createSQLXML()
          + createStatement()
          + createStatement()
          + createStatement()
          + createStruct()
          + getAutoCommit()
          + getCatalog()
          + getClientInfo()
          + getClientInfo()
          + getHoldability()
          + getMetaData()
          + getNetworkTimeout()
          + getSchema()
          + getTransactionIsolation()
          + getTypeMap()
          + getWarnings()
          + isClosed()
          + isReadOnly()
          + isValid()
          + nativeSQL()
          + prepareCall()
          + prepareCall()
          + prepareCall()
          + prepareStatement()
          + prepareStatement()
          + prepareStatement()
          + prepareStatement()
          + prepareStatement()
          + prepareStatement()
          + releaseSavepoint()
          + rollback()
          + rollback()
          + setAutoCommit()
          + setCatalog()
          + setClientInfo()
          + setClientInfo()
          + setHoldability()
          + setNetworkTimeout()
          + setReadOnly()
          + setSavepoint()
          + setSavepoint()
          + setSchema()
          + setTransactionIsolation()
          + setTypeMap()
          + compareTo()
      }
    }
  }
  

  PooledConnection -up-|> Connection
  PooledConnection -up-|> Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
